--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -123,6 +123,8 @@ classes:
       name:
         range: string
         required: true
+        annotations:
+          test_type: name
       sample_type:
         range: string
         required: true
@@ -134,6 +136,8 @@ classes:
       collection_location:
         range: string
         required: true
+        annotations:
+          test_type: city
       description:
         range: string
       host_taxon:
