--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,18 @@
+# Codegen based on schema
 entities/cli/gql_schema.py	linguist-generated=true
 entities/api/schema.json	linguist-generated=true
 entities/api/schema.graphql	linguist-generated=true
 entities/api/queries.py	linguist-generated=true
 entities/api/mutations.py	linguist-generated=true
 entities/api/types/*	linguist-generated=true
-entities/codegen/tests/output/* linguist-generated=true
 entities/database/models/*	linguist-generated=true
 entities/cerbos/policies/*	linguist-generated=true
 entities/support/enums.py	linguist-generated=true
 entities/schema/README.md	linguist-generated=true
+
+# Codegen based on mock schema
+entities/codegen/tests/output/api/* linguist-generated=true
+entities/codegen/tests/output/api/types/* linguist-generated=true
+entities/codegen/tests/output/cerbos/policies/*	linguist-generated=true
+entities/codegen/tests/output/database/models/*	linguist-generated=true
+entities/codegen/tests/output/support/*	linguist-generated=true
