--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -181,9 +181,9 @@ classes:
       taxon:
         range: Taxon
         inverse: Taxon.sequencing_reads
-      primer_bed:
-        range: PrimerBed
-        inverse: PrimerBed.sequencing_reads
+      primer_file:
+        range: GenomicRange
+        inverse: GenomicRange.sequencing_reads
       consensus_genomes:
         range: ConsensusGenome
         inverse: ConsensusGenome.sequence_read
@@ -194,20 +194,6 @@ classes:
         multivalued: true
     annotations:
       plural: SequencingReads
-
-  PrimerBed:
-    is_a: Entity
-    mixins:
-      - EntityMixin
-    attributes:
-      file:
-        range: File
-      sequencing_reads:
-        range: SequencingRead
-        inverse: SequencingRead.primer_bed
-        multivalued: true
-    annotations:
-      plural: PrimerBeds
 
   GenomicRange:
     is_a: Entity
@@ -223,6 +209,10 @@ classes:
       consensus_genomes:
         range: ConsensusGenome
         inverse: ConsensusGenome.genomic_range
+        multivalued: true
+      sequencing_reads:
+        range: SequencingRead
+        inverse: SequencingRead.primer_file
         multivalued: true
     annotations:
       plural: GenomicRanges
