--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -310,4 +309,6 @@ static
 .env.localdev
 
 # Codegen on mock schema
+workflows/codegen/tests/output/
 entities/codegen/tests/output/
+platformics/codegen/tests/output/
