add template override to generator script

--- a/workflows/Makefile
+++ b/workflows/Makefile
@@ -80,7 +80,7 @@ DIR_LINT_CODEGEN = database/models/ api/types/ api/{queries,mutations}.py test_i
 DIR_LINT_GRAPHQL = cli/gql_schema.py
 .PHONY: codegen
 codegen:  ## Update the GQL types used by the CLI
-	$(docker_compose) exec $(FOLDER) python3 platformics/codegen/generator.py api generate --schemafile schema/workflows.yaml --output-prefix . --skip-render-files
+	$(docker_compose) exec $(FOLDER) python3 platformics/codegen/generator.py api generate --schemafile schema/workflows.yaml --output-prefix . --skip-render-files --template-override-paths workflows_templates/
 	$(docker_compose_run) $(FOLDER) black $(DIR_LINT_CODEGEN)
 	$(docker_compose_run) $(FOLDER) ruff check --fix $(DIR_LINT_CODEGEN)
 
