--- a/workflows/cerbos/policies/run_entity_input.yaml
+++ b/workflows/cerbos/policies/run_entity_input.yaml
@@ -8,7 +8,7 @@ resourcePolicy:
     - common_roles
   resource: "run_entity_input"
   rules:
-    - actions: ['view', 'create', 'update']
+    - actions: ['view']
       effect: EFFECT_ALLOW
       derivedRoles:
         - project_member
