Add more comments to explain what entities are used for

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -88,9 +88,11 @@ classes:
       id:
         identifier: true
         range: uuid
+      # This file's ID is stored in the entity column <entity_field_name>_id
       entity_field_name:
         range: string
         required: true
+      # Which entity this file is connected to
       entity:
         range: Entity
         required: true
@@ -100,9 +102,11 @@ classes:
       protocol:
         range: FileAccessProtocol
         required: true
+      # Bucket name
       namespace:
         range: string
         required: true
+      # Prefix (does not start with /)
       path:
         range: string
         required: true
@@ -130,6 +134,7 @@ classes:
       name:
         range: string
         required: true
+      # Metadata provided by user
       sample_type:
         range: string
         required: true
@@ -169,22 +174,28 @@ classes:
     mixins:
       - EntityMixin
     attributes:
+      # Sample associated with this SequencingRead (a sample can have multiple sets of SequencingReads)
       sample:
         range: Sample
         inverse: Sample.sequencing_reads
+      # Wet lab protocol
       protocol:
         range: SequencingProtocol
         required: true
+      # Files containing sequencing reads (R1 and R2 refer to read pairs 1/2 in Illumina paired-end sequencing)
       r1_file:
         range: File
       r2_file:
         range: File
+      # Which sequencing technology / instrument was used?
       technology:
         range: SequencingTechnology
         required: true
+      # Did we sequence DNA or RNA?
       nucleic_acid:
         range: NucleicAcid
         required: true
+      # Does the sample include ERCCs, synthetic sequences of known quantity used for QC checks
       has_ercc:
         range: boolean
         required: true
@@ -196,10 +207,12 @@ classes:
       primer_file:
         range: GenomicRange
         inverse: GenomicRange.sequencing_reads
+      # Consensus Genomes generated from these Sequencing Reads
       consensus_genomes:
         range: ConsensusGenome
         inverse: ConsensusGenome.sequence_read
         multivalued: true
+      # Contigs generated from these Sequencing Reads
       contigs:
         range: Contig
         inverse: Contig.sequencing_read
@@ -215,6 +228,7 @@ classes:
     mixins:
       - EntityMixin
     attributes:
+      # Genomic coordinates based this reference genome
       reference_genome:
         range: ReferenceGenome
         inverse: ReferenceGenome.genomic_ranges
@@ -236,8 +250,10 @@ classes:
     mixins:
       - EntityMixin
     attributes:
+      # FASTA reference genome
       file:
         range: File
+      # Indexed FASTA file (.FAI file if any)
       file_index:
         range: File
       # e.g. GRCh38.p14
