--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 strawberry-sqlalchemy-mapper = "^0.1.1"
+strawberry-graphql = "0.217.0"
 fastapi = "^0.100.0"
 rich = "^13.4.2"
 typer = "^0.9.0"
