Server can't start without codegen

--- a/entities/Makefile
+++ b/entities/Makefile
@@ -35,6 +35,7 @@ local-setup: ## Load db tables and seed data
 	while [ -z "$$($(docker_compose) exec -T entities-db psql $(LOCAL_DB_CONN_STRING) -c 'select 1')" ]; do echo "waiting for db to start..."; sleep 1; done;
 	$(docker_compose_run) entities alembic upgrade head
 	$(MAKE) local-seed
+	$(MAKE) codegen-test-schema
 
 .PHONY: local-start
 local-start: ## Start a local dev environment that's been stopped.
